Professional research profile: meta tags, highlights, news, CTAs

--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
   <section class="hero" id="about">
     <h1>Osman Goni Ridwan</h1>
     <p class="tag">AI + Materials Discovery • Generative Models • Crystal Structure Prediction</p>
-    <p>PhD candidate in Mechanical Engineering (UNC Charlotte; GPA 4.00/4.00). I build symmetry-aware
+    <p>PhD candidate in Mechanical Engineering (UNC Charlotte). I build symmetry-aware
        generative models for crystals (LEGO-xtal) and high-throughput optimization workflows using ASE,
        VASP, and ML force fields (MACE / ALIGNN-FF). I collaborate across Computer Science and
        Computational Chemistry to accelerate functional materials discovery. <!-- Resume source --> </p>
-    <p class="affil">University of North Carolina at Charlotte · Materials AI Lab</p>
+    <p class="affil">University of North Carolina at Charlotte · Materials Modeling and Informatics (MMI) Lab</p>
     <p class="cta">
       <a class="btn primary" href="#pubs">Publications</a>
-      <a class="btn" href="assets/CV.pdf" target="_blank" rel="noopener">Download CV</a>
+      <a class="btn" href="assets/OGR.pdf" target="_blank" rel="noopener">Download CV</a>
       <a class="btn" href="https://scholar.google.com/" target="_blank" rel="noopener">Google Scholar</a>
     </p>
   </section>
@@ -76,7 +76,7 @@
     <h2>Research Interests</h2>
     <ul>
       <li>Atomistic materials modeling & crystal structure prediction</li>
-      <li>AI generative models for materials (diffusion, LLMs, symmetry-aware reps)</li>
+      <li>AI generative models for materials (diffusion, LLMs, VAE with symmetry-aware representations)</li>
       <li>Energy, molecular and battery materials</li>
     </ul>
   </section>
@@ -95,7 +95,7 @@
     <h2>Education</h2>
     <ul>
       <li><b>Ph.D., Mechanical Engineering</b>, University of North Carolina at Charlotte — 2024–present (3rd year), GPA 4.00/4.00; Advisor: Prof. Qiang Zhu</li>
-      <li><b>B.Sc., Naval Architecture & Marine Engineering</b>, BUET — 2017–2022; CGPA 3.45/4.00. Thesis on earth-pipe cooling system thermal performance (MARTEC 2022 proceedings, 2023).</li>
+      <li><b>B.Sc., Naval Architecture & Marine Engineering</b>, BUET — 2017–2022; Thesis on earth-pipe cooling system thermal performance (MARTEC 2022 proceedings, 2023).</li>
     </ul>
   </section>
 
@@ -164,6 +164,15 @@
           <a class="badge" href="#" target="_blank" rel="noopener">BibTeX</a>
         </div>
       </li>
+      <li>
+        <b>Numerical Computation of Thermal Performance of Earth Pipe Cooling Systems</b> — 2023.  
+        O. G. Ridwan, S. S. Sifat, F. E. Idrish, M. M. Karim. Proceedings of the 13th International Conference on Marine Technology (MARTEC 2022).  
+        <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=XXXXXX" target="_blank">SSRN</a>
+        <div class="badges">
+          <span class="badge">conference</span>
+          <a class="badge" href="#" target="_blank" rel="noopener">BibTeX</a>
+        </div>
+      </li>
     </ol>
   </section>
 
@@ -181,26 +190,19 @@
     <h2>Technical Skills</h2>
     <ul>
       <li><b>Programming:</b> Python, Bash, MATLAB; Linux HPC scripting; Git</li>
-      <li><b>Software:</b> ASE, VASP, LAMMPS; VESTA; MLFFs (MACE, ALIGNN-FF)</li>
+      <li><b>Software:</b> ASE, VASP, LAMMPS; VESTA; MLFFs (MACE, GULP, ALIGNN-FF)</li>
     </ul>
   </section>
 
-  <section id="service">
-    <h2>Service & Teaching</h2>
-    <ul>
-      <li>Peer reviewer (selected): computational materials & ML journals/workshops.</li>
-      <li>Guest lectures: symmetry & Wyckoff sites for generative models; MLFF benchmarking.</li>
-    </ul>
-  </section>
 
   <!-- CONTACT -->
   <section id="contact">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:oridwan@charlotte.edu">oridwan@charlotte.edu</a> </p>
     <p>
-      <a href="https://scholar.google.com/" target="_blank" rel="noopener">Google Scholar</a> ·
-      <a href="https://orcid.org/" target="_blank" rel="noopener">ORCID</a> ·
-      <a href="https://github.com/MaterSim/LEGO-xtal" target="_blank" rel="noopener">GitHub (LEGO‑xtal)</a> ·
+      <a href="https://scholar.google.com/citations?user=I816NWsAAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar</a> ·
+      <a href="https://orcid.org/0009-0005-8578-0791" target="_blank" rel="noopener">ORCID</a> ·
+      <a href="https://https://github.com/oridwan" target="_blank" rel="noopener">GitHub (LEGO‑xtal)</a> ·
       <a href="https://linkedin.com/in/ogridwan" target="_blank" rel="noopener">LinkedIn</a>
     </p>
   </section>
