--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     ]
   }
   </script>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <style>
     .btn{display:inline-block;border:1px solid #1f2430;padding:10px 14px;border-radius:10px;color:#e5e7eb;margin-right:10px}
     .btn.primary{background:linear-gradient(90deg,#60a5fa,#34d399);border:none;color:#0b0c10;font-weight:700}
@@ -57,6 +57,7 @@
 <main>
   <!-- HERO -->
   <section class="hero" id="about">
+    <div class="hero-grid"><div class="hero-text">
     <h1>Osman Goni Ridwan</h1>
     <p class="tag">AI + Materials Discovery • Generative Models • Crystal Structure Prediction</p>
     <p>PhD candidate in Mechanical Engineering (UNC Charlotte). I build symmetry-aware
@@ -69,6 +70,11 @@
       <a class="btn" href="assets/OGR.pdf" target="_blank" rel="noopener">Download CV</a>
       <a class="btn" href="https://scholar.google.com/" target="_blank" rel="noopener">Google Scholar</a>
     </p>
+    </div>
+    <div class="hero-photo">
+      <img src="assets/image_OGR.jpg" alt="Osman Goni Ridwan portrait" class="avatar" loading="lazy">
+    </div>
+    </div>
   </section>
 
   <!-- RESEARCH INTERESTS -->
