--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
       <li><b>PyXtal-DFTB:</b> automated elastic constants for organic crystals; collaboration with CUNY on mechanical properties of peptide hydrates (co-authored manuscript under review). <a href="https://github.com/MaterSim/PyXtal_DFTB" target="_blank">Code</a></li>
       <li><b>Symmetry-driven structure generator in PyXtal:</b> leveraged crystallographic symmetry; collaboration with LLNL to curate ~200 hypothetical boron nitrides for XAS analysis (co-authored manuscript under review). <a href="https://github.com/MaterSim/PyXtal" target="_blank">Code</a></li>
       <li><b>Reciprocal-space representations:</b> physics-informed 4D scattering-based descriptors for matching/reconstruction (first-authored manuscript in prep.).</li>
+      <li><b>Latent space exploration:</b> investigating crystal representations in latent space for enhanced optimization (in preparation).</li>
+      <li><b>Developing crystal structure determination from PXRD by incorporating physical knowledge into existing LLM foundation models, with plans to integrate agentic systems to enhance model accuracy.</li>
     </ul>
   </section>
 
@@ -141,7 +143,7 @@
       </li>
       <li>
         <b>Unveiling X-ray Absorption Signatures of Boron Nitride via First-Principles Simulation and Machine Learning</b> — 2025.  
-        W-Y Sun, O. G. Ridwan, S. O. Kucheyev, Q. Zhu, L-W Wan. Under review in <i>Next Materials</i>.
+        W-Y Sun, O. G. Ridwan, S. O. Kucheyev, Q. Zhu, L-W Wan. Accepted for publication in <i>Next Materials</i>.
         <div class="badges">
           <span class="badge">preprint</span>
           <a class="badge" href="#" target="_blank" rel="noopener">BibTeX</a>
