--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
   <section id="news">
     <h2>News</h2>
     <ul>
+      <li><b>Jan 2026:</b> <i>AI-Assisted Rapid Crystal Structure Generation Towards a Target Local Environment</i> accepted and online in <i>npj Comput. Mater.</i>, <b>12</b>, 7 (2026).</li>
+      <li><b>Jan 2026:</b> <i>Context-Adaptive Nanotopology in Peptide Crystals</i> accepted in <i>Matter</i>.</li>
+      <li><b>Jan 2026:</b> <i>Crystal Generation using the Fully Differentiable Pipeline and Latent Space Optimization</i> uploaded to arXiv.</li>
       <li><b>Aug 2025:</b> Best Poster Award — CITRANS Symposium, UNC Charlotte.</li>
       <li><b>Jul 2025:</b> LEGO‑xtal preprint updated on arXiv; code refactor released.</li>
       <li><b>Mar 2024:</b> Spotlight poster preview at Gordon Research Conference.</li>
@@ -133,11 +136,11 @@
     <h2>Publications & Preprints</h2>
     <ol>
       <li>
-        <b>AI-Assisted Rapid Crystal Structure Generation Towards a Target Local Environment (LEGO-xtal)</b> — 2025.  
-        O. G. Ridwan, S. Pitié, M. S. Raj, D. Dai, G. Frapper, H-F. Xue, Q. Zhu. Under review (npj Computational Materials).  
-        <a href="https://arxiv.org/abs/2506.08224" target="_blank">arXiv</a>
+        <b>AI-Assisted Rapid Crystal Structure Generation Towards a Target Local Environment (LEGO-xtal)</b> — 2026.  
+        O. G. Ridwan, S. Pitié, M. S. Raj, D. Dai, G. Frapper, H-F. Xue, Q. Zhu. Published in <i>npj Computational Materials</i>, <b>12</b>, 7.  
+        <a href="https://doi.org/10.1038/s41524-025-01931-9" target="_blank">Journal</a> | <a href="https://arxiv.org/abs/2506.08224" target="_blank">arXiv</a>
         <div class="badges">
-          <span class="badge">preprint</span>
+          <span class="badge">published</span>
           <a class="badge" href="#" target="_blank" rel="noopener">BibTeX</a>
         </div>
       </li>
@@ -150,11 +153,20 @@
         </div>
       </li>
       <li>
-        <b>Context-Adaptive Nanotopology in Peptide Crystals</b> — 2025.  
-        V. Athiyarath, E. Naranjo, D. Dave, O. G. Ridwan, …, R. V. Ulijn, X. Chen. ChemRxiv; under review in <i>Matter</i>.  
-        <a href="https://chemrxiv.org/engage/chemrxiv/article-details/67818f64fa469535b981d92c" target="_blank">ChemRxiv</a>
+        <b>Crystal Generation using the Fully Differentiable Pipeline and Latent Space Optimization</b> — 2026.  
+        O. G. Ridwan, H-F. Xue, Q. Zhu.  
+        <a href="https://arxiv.org/abs/2601" target="_blank">arXiv</a>
         <div class="badges">
           <span class="badge">preprint</span>
+          <a class="badge" href="#" target="_blank" rel="noopener">BibTeX</a>
+        </div>
+      </li>
+      <li>
+        <b>Context-Adaptive Nanotopology in Peptide Crystals</b> — 2026.  
+        V. Athiyarath, E. Naranjo, D. Dave, O. G. Ridwan, …, R. V. Ulijn, X. Chen. Accepted in <i>Matter</i>.  
+        <a href="https://chemrxiv.org/engage/chemrxiv/article-details/67818f64fa469535b981d92c" target="_blank">ChemRxiv</a>
+        <div class="badges">
+          <span class="badge">accepted</span>
           <a class="badge" href="#" target="_blank" rel="noopener">BibTeX</a>
         </div>
       </li>
