--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
     <h2>Contact</h2>
     <p>Email: <a href="mailto:oridwan@charlotte.edu">oridwan@charlotte.edu</a> </p>
     <p>
-      <a href="https://scholar.google.com/citations?user=I816NWsAAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar</a> ·
+      <a href="https://scholar.google.com/citations?user=-NaiqfUAAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar</a> ·
       <a href="https://orcid.org/0009-0005-8578-0791" target="_blank" rel="noopener">ORCID</a> ·
       <a href="https://https://github.com/oridwan" target="_blank" rel="noopener">GitHub (LEGO‑xtal)</a> ·
       <a href="https://linkedin.com/in/ogridwan" target="_blank" rel="noopener">LinkedIn</a>
