--- a/index.html
+++ b/index.html
@@ -31,36 +31,18 @@
   }
   </script>
   <link rel="stylesheet" href="style.css">
-  <style>
-    .btn{display:inline-block;border:1px solid #1f2430;padding:10px 14px;border-radius:10px;color:#e5e7eb;margin-right:10px}
-    .btn.primary{background:linear-gradient(90deg,#60a5fa,#34d399);border:none;color:#0b0c10;font-weight:700}
-    .affil{color:#9aa0a6;margin:.25rem 0 0}
-    .badges{margin-top:6px;display:flex;gap:8px}
-    .badge{display:inline-block;border:1px solid #1f2430;padding:2px 8px;border-radius:999px;font-size:12px;color:#9aa0a6}
-    .news-article{border-left:3px solid #60a5fa;padding:16px 0 16px 16px;margin-bottom:24px}
-    .news-header{display:flex;justify-content:space-between;align-items:flex-start;gap:16px;margin-bottom:8px}
-    .news-header h3{margin:0;font-size:18px;line-height:1.4;flex:1}
-    .news-date{color:#9aa0a6;font-size:14px;white-space:nowrap}
-    .news-article p{margin:0;color:#e5e7eb;line-height:1.6}
-    .project{margin-bottom:28px;padding-bottom:24px;border-bottom:1px solid #1f2430}
-    .project:last-child{border-bottom:none}
-    .project h3{margin:0 0 8px 0;font-size:18px;color:#e5e7eb}
-    .tech-stack{color:#9aa0a6;font-size:13px;margin:0 0 12px 0;font-style:italic}
-    .project ul{margin:0;padding-left:20px;color:#e5e7eb}
-    .project li{margin-bottom:8px;line-height:1.6}
-    .project-links{margin-top:12px;color:#60a5fa;font-size:14px}
-    .project-links a{color:#60a5fa;text-decoration:none;margin-right:16px}
-    .project-links a:hover{text-decoration:underline}
-  </style>
+  
 </head>
 <body>
+<a class="skip-link" href="#about">Skip to content</a>
 <header class="top">
-  <nav>
+  <nav aria-label="Primary">
     <a class="brand" href="#">Ridwan</a>
-    <div class="links">
+    <button class="menu-toggle" aria-expanded="false" aria-controls="primary-nav" aria-label="Toggle navigation">Menu</button>
+    <div class="links" id="primary-nav">
       <a href="#about">About</a>
       <a href="#interests">Research</a>
-      <a href="#experience">Experience</a>
+      <a href="#experience">Projects</a>
       <a href="#pubs">Publications</a>
       <a href="#blog">Blog</a>
       <a href="#talks">Talks</a>
@@ -87,7 +69,7 @@
     </p>
     </div>
     <div class="hero-photo">
-      <img src="assets/image_OGR.jpg" alt="Osman Goni Ridwan portrait" class="avatar" loading="lazy">
+      <img src="assets/image_OGR.jpg" alt="Osman Goni Ridwan portrait" class="avatar" width="260" height="260" decoding="async" fetchpriority="high">
     </div>
     </div>
   </section>
@@ -104,6 +86,7 @@
 
   <section id="news">
     <h2>News</h2>
+    <div class="news-grid">
     <article class="news-article">
       <div class="news-header">
         <h3>AI-Assisted Crystal Generation Paper Published in <i>npj Computational Materials</i></h3>
@@ -151,6 +134,7 @@
       </div>
       <p>Major update to LEGO-xtal preprint with complete code refactor and release on arXiv. Open-source implementation now available for reproducibility.</p>
     </article>
+    </div>
   </section>
 
   <!-- EDUCATION -->
@@ -322,7 +306,7 @@
     <p>
       <a href="https://scholar.google.com/citations?user=-NaiqfUAAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar</a> ·
       <a href="https://orcid.org/0009-0005-8578-0791" target="_blank" rel="noopener">ORCID</a> ·
-      <a href="https://https://github.com/oridwan" target="_blank" rel="noopener">GitHub (LEGO‑xtal)</a> ·
+      <a href="https://github.com/oridwan" target="_blank" rel="noopener">GitHub (LEGO‑xtal)</a> ·
       <a href="https://linkedin.com/in/ogridwan" target="_blank" rel="noopener">LinkedIn</a>
     </p>
   </section>
@@ -330,7 +314,41 @@
 
 <footer>
   <p>© 2025 O. G. Ridwan · <a href="mailto:oridwan@charlotte.edu">oridwan@charlotte.edu</a> · <a href="https://oridwan.github.io/">oridwan.github.io</a></p>
-  <p><small>Last updated: Sept 2025 · Hosted on GitHub Pages</small></p>
+    <p><small>Last updated: Jan 2026 · Hosted on GitHub Pages</small></p>
 </footer>
+<script>
+  // Mobile menu toggle
+  (function(){
+    const toggle = document.querySelector('.menu-toggle');
+    const nav = document.getElementById('primary-nav');
+    if (!toggle || !nav) return;
+    toggle.addEventListener('click', () => {
+      const open = nav.classList.toggle('open');
+      toggle.setAttribute('aria-expanded', String(open));
+    });
+  })();
+
+  // Scrollspy for active nav link
+  (function(){
+    const links = Array.from(document.querySelectorAll('.links a[href^="#"]'));
+    const sections = links
+      .map(a => document.querySelector(a.getAttribute('href')))
+      .filter(Boolean);
+    if (!('IntersectionObserver' in window)) return;
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        const id = '#' + entry.target.id;
+        const link = links.find(a => a.getAttribute('href') === id);
+        if (link) {
+          if (entry.isIntersecting) {
+            links.forEach(l => l.classList.remove('active'));
+            link.classList.add('active');
+          }
+        }
+      });
+    }, {rootMargin: '-40% 0px -55% 0px', threshold: 0});
+    sections.forEach(sec => observer.observe(sec));
+  })();
+</script>
 </body>
 </html>
