--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
   <meta property="og:description" content="Generative AI for crystal structure prediction; symmetry-aware models; HPC workflows.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://oridwan.github.io/">
+  <meta property="og:site_name" content="Osman Goni Ridwan">
+  <meta property="og:image" content="https://oridwan.github.io/assets/image_OGR.jpg">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Osman Goni Ridwan — AI + Materials Discovery">
   <meta name="twitter:description" content="Generative AI for crystal structure prediction; symmetry-aware models; HPC workflows.">
+  <meta name="twitter:image" content="https://oridwan.github.io/assets/image_OGR.jpg">
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -31,6 +34,45 @@
   }
   </script>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Source+Serif+4:opsz,wght@8..60,600;8..60,700&display=swap" rel="stylesheet">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "ScholarlyArticle",
+        "name": "AI-Assisted Rapid Crystal Structure Generation Towards a Target Local Environment (LEGO-xtal)",
+        "author": [
+          {"@type":"Person","name":"Osman Goni Ridwan"},
+          {"@type":"Person","name":"S. Pitié"},
+          {"@type":"Person","name":"M. S. Raj"},
+          {"@type":"Person","name":"D. Dai"},
+          {"@type":"Person","name":"G. Frapper"},
+          {"@type":"Person","name":"H.-F. Xue"},
+          {"@type":"Person","name":"Q. Zhu"}
+        ],
+        "datePublished": "2026",
+        "isPartOf": {"@type":"Periodical","name":"npj Computational Materials"},
+        "identifier": "https://doi.org/10.1038/s41524-025-01931-9",
+        "url": "https://doi.org/10.1038/s41524-025-01931-9"
+      },
+      {
+        "@type": "ScholarlyArticle",
+        "name": "Crystal Generation using the Fully Differentiable Pipeline and Latent Space Optimization",
+        "author": [
+          {"@type":"Person","name":"Osman Goni Ridwan"},
+          {"@type":"Person","name":"Hongfei Xue"},
+          {"@type":"Person","name":"Qiang Zhu"}
+        ],
+        "datePublished": "2026",
+        "identifier": "https://arxiv.org/abs/2601",
+        "url": "https://arxiv.org/abs/2601"
+      }
+    ]
+  }
+  </script>
   
 </head>
 <body>
@@ -69,7 +111,7 @@
     </p>
     </div>
     <div class="hero-photo">
-      <img src="assets/image_OGR.jpg" alt="Osman Goni Ridwan portrait" class="avatar" width="260" height="260" decoding="async" fetchpriority="high">
+      <img src="assets/image_OGR.jpg" alt="Osman Goni Ridwan portrait" class="avatar" width="260" height="260" decoding="async" fetchpriority="high" sizes="(max-width: 900px) 180px, 260px">
     </div>
     </div>
   </section>
@@ -93,6 +135,11 @@
         <span class="news-date">Jan 2026</span>
       </div>
       <p><i>AI-Assisted Rapid Crystal Structure Generation Towards a Target Local Environment</i> is now online. The work presents LEGO-xtal, a symmetry-aware generative framework capable of discovering 1,700+ novel sp²-carbon allotropes. Published in <i>npj Comput. Mater.</i>, <b>12</b>, 7.</p>
+      <div class="news-meta">
+        <span class="badge">Published</span>
+        <a href="https://doi.org/10.1038/s41524-025-01931-9" target="_blank" rel="noopener">DOI</a>
+        <a href="https://arxiv.org/abs/2506.08224" target="_blank" rel="noopener">arXiv</a>
+      </div>
     </article>
 
     <article class="news-article">
@@ -101,6 +148,10 @@
         <span class="news-date">Jan 2026</span>
       </div>
       <p><i>Crystal Generation using the Fully Differentiable Pipeline and Latent Space Optimization</i> now available on arXiv. This work extends crystal design with GPU-accelerated optimization in latent space.</p>
+      <div class="news-meta">
+        <span class="badge">Preprint</span>
+        <a href="https://arxiv.org/abs/2601" target="_blank" rel="noopener">arXiv</a>
+      </div>
     </article>
 
     <article class="news-article">
@@ -109,6 +160,10 @@
         <span class="news-date">Jan 2026</span>
       </div>
       <p><i>Context-Adaptive Nanotopology in Peptide Crystals</i> has been accepted for publication in <i>Matter</i>. Co-authored work exploring adaptive structure-property relationships in peptide systems.</p>
+      <div class="news-meta">
+        <span class="badge">Accepted</span>
+        <a href="https://chemrxiv.org/engage/chemrxiv/article-details/67818f64fa469535b981d92c" target="_blank" rel="noopener">ChemRxiv</a>
+      </div>
     </article>
 
     <article class="news-article">
@@ -117,6 +172,9 @@
         <span class="news-date">Dec 2025</span>
       </div>
       <p>Completed M.S. in Mechanical Engineering at UNC Charlotte with perfect 4.00/4.00 GPA. Research focused on symmetry-aware generative models and crystal design.</p>
+      <div class="news-meta">
+        <span class="badge">Milestone</span>
+      </div>
     </article>
 
     <article class="news-article">
@@ -125,6 +183,9 @@
         <span class="news-date">Aug 2025</span>
       </div>
       <p>Recognition for research presented at the CITRANS Symposium, University of North Carolina at Charlotte.</p>
+      <div class="news-meta">
+        <span class="badge">Award</span>
+      </div>
     </article>
 
     <article class="news-article">
@@ -133,6 +194,11 @@
         <span class="news-date">Jul 2025</span>
       </div>
       <p>Major update to LEGO-xtal preprint with complete code refactor and release on arXiv. Open-source implementation now available for reproducibility.</p>
+      <div class="news-meta">
+        <span class="badge">Preprint</span>
+        <a href="https://arxiv.org/abs/2506.08224" target="_blank" rel="noopener">arXiv</a>
+        <a href="https://github.com/MaterSim/LEGO-xtal" target="_blank" rel="noopener">Code</a>
+      </div>
     </article>
     </div>
   </section>
@@ -151,7 +217,8 @@
   <section id="experience">
     <h2>Research Projects</h2>
     
-    <div class="project">
+    <div class="projects-grid">
+      <div class="project">
       <h3>LEGO-xtal: Symmetry-Aware Generative System for Crystal Design</h3>
       <p class="tech-stack">PyTorch, Deep Generative Models, PyXtal, ASE, VASP, HPC</p>
       <ul>
@@ -169,9 +236,9 @@
         <li>Implemented GPU-parallel batched evaluation of structure descriptors and objectives to scale candidate generation and refinement.</li>
         <li>Built a fully differentiable pipeline that backpropagates through representation-space objectives and couples them with latent-space refinement.</li>
         <li>Achieved ~5× speedup via batching and GPU acceleration, with improved success in meeting target local-environment constraints.</li>
-      </ul>
+        </div>
     </div>
-
+        <div class="project">
     <div class="project">
       <h3>PyXtal-DFTB: High-Throughput Property Screening</h3>
       <p class="tech-stack">ASE, DFTB+, automated workflows</p>
@@ -187,9 +254,9 @@
       <p class="tech-stack">DFT (VASP), first-principles spectroscopy</p>
       <ul>
         <li>Conducted DFT simulations and collaborated with LLNL on ML-assisted X-ray absorption spectroscopy and optical modeling of boron nitride.</li>
-      </ul>
+        </div>
     </div>
-
+        <div class="project">
     <div class="project">
       <h3>Reciprocal-Space Representations for Structure Matching</h3>
       <p class="tech-stack">Scattering features, geometric embeddings, PyTorch</p>
@@ -206,9 +273,9 @@
         <li>Building an agent that orchestrates structure generation, simulation, and refinement.</li>
         <li>Implements log parsing, failure detection, and auto-retry loops on HPC.</li>
         <li>Goal: autonomous crystal design from minimal user input.</li>
-      </ul>
+        </div>
     </div>
-
+        <div class="project">
   <section id="pubs">
     <h2>Publications & Preprints</h2>
     <ol>
@@ -221,9 +288,9 @@
           <a class="badge" href="#" target="_blank" rel="noopener">BibTeX</a>
         </div>
       </li>
-      <li>
+        </div>
         <b>Unveiling X-ray Absorption Signatures of Boron Nitride via First-Principles Simulation and Machine Learning</b> — 2025.  
-        W-Y Sun, O. G. Ridwan, S. O. Kucheyev, Q. Zhu, L-W Wan. Accepted for publication in <i>Next Materials</i>.
+        <div class="project">
         <div class="badges">
           <span class="badge">preprint</span>
           <a class="badge" href="#" target="_blank" rel="noopener">BibTeX</a>
@@ -303,9 +370,9 @@
   <section id="contact">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:oridwan@charlotte.edu">oridwan@charlotte.edu</a> </p>
-    <p>
+      </div>
       <a href="https://scholar.google.com/citations?user=-NaiqfUAAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar</a> ·
-      <a href="https://orcid.org/0009-0005-8578-0791" target="_blank" rel="noopener">ORCID</a> ·
+      <div class="project">
       <a href="https://github.com/oridwan" target="_blank" rel="noopener">GitHub (LEGO‑xtal)</a> ·
       <a href="https://linkedin.com/in/ogridwan" target="_blank" rel="noopener">LinkedIn</a>
     </p>
@@ -314,6 +381,7 @@
 
 <footer>
   <p>© 2025 O. G. Ridwan · <a href="mailto:oridwan@charlotte.edu">oridwan@charlotte.edu</a> · <a href="https://oridwan.github.io/">oridwan.github.io</a></p>
+    </div>
     <p><small>Last updated: Jan 2026 · Hosted on GitHub Pages</small></p>
 </footer>
 <script>
